--- a/Catergoiescss.css
+++ b/Catergoiescss.css
@@ -90,7 +90,7 @@ a:hover{
 .Intro{
   width: 100%;
   height: 90vh; /* Set a fixed height for the container */
-  background-image: url("../media/sea backgrounda.jpg");
+  background-image: url("sea backgrounda.jpg");
   background-size: cover;
 }
 
@@ -209,7 +209,7 @@ iframe {
 }
 
 .footer{
-  background-image: url('media/Sea-backgroundcjpg.jpg');
+  background-image: url('Sea-backgroundcjpg.jpg');
   background-size: 100%;
   background-position: center;
   display: flex;
