--- a/Hikkaduwa.css
+++ b/Hikkaduwa.css
@@ -94,7 +94,7 @@ nav ul{
   .Intro{
     width: 100%;
     height: 90vh; /* Set a fixed height for the container */
-    background-image: url("../media/sea backgrounda.jpg");
+    background-image: url("sea backgrounda.jpg");
     background-size: cover;
   }
 
@@ -175,7 +175,7 @@ section ul li{
   }
 
   footer {
-      background-image: url('../media/Sea-backgroundcjpg.jpg');
+      background-image: url('Sea-backgroundcjpg.jpg');
       background-size: 100%;
       background-position: center;
       display: flex;
