--- a/HomePageccs.css
+++ b/HomePageccs.css
@@ -113,7 +113,7 @@ a:hover{
 .Intro{
   width: 100%;
   height: 90vh; /* Set a fixed height for the container */
-  background-image: url("../media/sea backgrounda.jpg");
+  background-image: url("sea backgrounda.jpg");
   background-size: cover;
 }
 
@@ -285,7 +285,7 @@ section:nth-child(odd){
 }
 
 footer{
-  background-image: url('C:/Users/User/OneDrive - Asia Pacific Institute of Information Technology/School Websites/Assignment.Turtle.Website/media/Sea-backgroundcjpg.jpg');
+  background-image: url('Sea-backgroundcjpg.jpg');
   background-size: 100%
   background-position: center;
   display: flex;
