--- a/Threats to Turtles.css
+++ b/Threats to Turtles.css
@@ -88,7 +88,7 @@ a:hover{
 .Intro{
   width: 100%;
   height: 90vh; /* Set a fixed height for the container */
-  background-image: url("../media/sea backgrounda.jpg");
+  background-image: url("sea backgrounda.jpg");
   background-size: cover;
 }
 
@@ -175,7 +175,7 @@ a:hover {
 }
 
 footer{
-    background-image: url('C:/Users/User/OneDrive - Asia Pacific Institute of Information Technology/School Websites/Assignment.Turtle.Website/media/sea backgroundbjpg.jpg');
+    background-image: url('sea backgroundbjpg.jpg');
     background-size: 100%;
     background-position: center;
     display: flex;
