--- a/dual.css
+++ b/dual.css
@@ -111,7 +111,7 @@ img {
 
 
 footer{
-  background-image: url('C:/Users/User/OneDrive - Asia Pacific Institute of Information Technology/School Websites/Assignment.Turtle.Website/media/Sea-backgroundcjpg.jpg');
+  background-image: url('Sea-backgroundcjpg.jpg');
   background-size: 100%
   background-position: center;
   display: flex;
