--- a/Catergoiescss.css
+++ b/Catergoiescss.css
@@ -5,16 +5,16 @@ body{
 }
 
 body::-webkit-scrollbar {
- width: 0.5em;/* Adjust the width as needed */
- height: 0.5em;  /* Adjust the height as needed */
+ width: 0.5em;
+ height: 0.5em;
 }
 
 body::-webkit-scrollbar-track {
- background-color: #f1f1f1; /* Optional: Change the track color */
+ background-color: #f1f1f1;
 }
 
 body::-webkit-scrollbar-thumb {
- background-color: #888; /* Optional: Change the thumb color */
+ background-color: #888; 
 }
 
 .navLink {
@@ -31,6 +31,7 @@ body::-webkit-scrollbar-thumb {
 
 .menulink {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -51,12 +52,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 .menuimg{
-  width: 2.5%;
+  display: none;
+  width: 3%;
   cursor: pointer;
   padding-right: 10px;
 }
 
 nav{
+  height: 40%;
   margin-left: 19%;
   margin-right: 1%;
   flex: 1;
@@ -64,7 +67,7 @@ nav{
   background-color: #3e9f90;
 }
 
-nav ul li{
+ nav ul li{
    list-style: none;
    display: inline-block;
    margin-right: 30px;
@@ -87,42 +90,21 @@ a:hover{
   transition: color 0.5s;
 }
 
-.Intro{
-  width: 100%;
-  height: 90vh; /* Set a fixed height for the container */
-  background-image: url("sea backgrounda.jpg");
-  background-size: cover;
-}
-
-header h4,
-header h3{
-  position: absolute;
-  padding: 2% 2% 1% 2%;
-  margin: 2% 3% 1% 3%;
-  font-family: Arial, sans-serif;
-  font-size: 20px;
-  line-height: 1.5;
-  color: #fff;
-  text-align: right;
-  bottom: 0;
-  transition: background-color 0.5 ;
-
-}
 
 .line{
-  border: 3px solid #DEB887;
+  border: 2px solid #DEB880;
   width: 75%;
   align-items: center;
   padding: 0 0 0 0;
-  margin: 2% 25% 2% 25%;
+  margin: 2% 20% 2% 24.5%;
 }
 
-header h4:hover{
-  background-color: rgba(	147, 147, 147, 0.5);
+section{
+  margin: 20px;
 }
 
-header h3:hover{
-  background-color: rgba(	147, 147, 147, 0.5);
+section h4{
+  font-size: 105%;
 }
 
 section h1{
@@ -161,7 +143,6 @@ p{
   margin: 1px;
 }
 
-
 h4{
   margin-bottom: 10px;
   margin-left: 70px;
@@ -180,7 +161,6 @@ table {
   font-size: 17px;
   text-align: center;
   padding: 0 0.5% 0.9% 0.5%;
-
 }
 
 tr{
@@ -204,7 +184,7 @@ th {
 iframe {
   border: 0;
   padding: 0 0.5% 0.9% 0.5%;
-  width: 100%;
+  width: 99%;
   height: 420px;
 }
 
@@ -230,4 +210,58 @@ cursor: pointer;
 
  .social-links{
 text-align: center;
+ }
+
+ @media only screen and (max-width: 700px){
+   body{
+     padding: 0;
+   }
+
+   @keyframes backgroundTransition1 {
+         0% {
+           background-color: rgba(54,38,83); /* Color A */
+         }
+         50% {
+           background-color: #676752; /* Color B */
+         }
+         75% {
+           background-color: rgba(139, 96, 208); /* Color A */
+         }
+         100% {
+           background-color: rgba(54,38,83,); /* Color A */
+         }
+       }
+   nav ul{
+     width: 100%;
+     animation: backgroundTransition1 20s infinite;
+     position: absolute;
+     top: 55px;
+     right: 0;
+     z-index: 2;
+   }
+   nav ul li{
+     display: block;
+     margin-top: 10px;
+     margin-bottom: 10px;
+   }
+
+   .menuimg{
+     width: 5%;
+     display: block;
+   }
+
+   .logo{
+     width: 12%;
+     height: 10%;
+   }
+
+   #menuList{
+     overflow: hidden;
+     transition: 0.5s;
+   }
+
+
+ footer{
+   margin-bottom: 0;
+ }
  }
