--- a/Hikkaduwa.css
+++ b/Hikkaduwa.css
@@ -10,21 +10,21 @@
   }
 
   body::-webkit-scrollbar {
-   width: 0.5em;/* Adjust the width as needed */
-   height: 0.5em;  /* Adjust the height as needed */
+   width: 0.5em;
+   height: 0.5em;
   }
 
   body::-webkit-scrollbar-track {
-   background-color: #f1f1f1; /* Optional: Change the track color */
+   background-color: #f1f1f1;
   }
 
   body::-webkit-scrollbar-thumb {
-   background-color: #888; /* Optional: Change the thumb color */
+   background-color: #888; 
   }
 
   .navLink {
         width: 100%;
-        min-height: 70%;
+        min-height: 100%;
         padding-left: 2%;
         padding-right: 2%;
         padding-top: 1%;
@@ -33,8 +33,10 @@
         overflow: hidden;
   }
 
+
   .menulink {
       width: 100%;
+      height: 100%;
       display: flex;
       align-items: center;
   }
@@ -44,7 +46,7 @@
     font-weight: 700;
     color: #ffffff;
     font-size: 50px;
-    margin: 1% 15% 0 15%;
+    margin: 0;
     text-align: center;
   }
 
@@ -55,27 +57,30 @@
   }
 
   .menuimg{
-    width: 2.5%;
+    display: none;
+    width: 3%;
     cursor: pointer;
     padding-right: 10px;
   }
 
   nav{
+    height: 8vh;
     margin-left: 19%;
     margin-right: 1%;
+    margin-bottom: 10px;
     flex: 1;
     text-align: right;
     background-color: #3e9f90;
   }
 
-nav ul{
-  padding-inline-start: 15px;
-}
-
-  nav ul li{
+   nav ul li{
      list-style: none;
      display: inline-block;
      margin-right: 30px;
+  }
+
+  nav ul{
+    padding-inline-start: 15px;
   }
 
   a{
@@ -89,44 +94,6 @@ nav ul{
     color: lightgreen;
     font-weight: bold;
     transition: color 0.5s;
-  }
-
-  .Intro{
-    width: 100%;
-    height: 90vh; /* Set a fixed height for the container */
-    background-image: url("sea backgrounda.jpg");
-    background-size: cover;
-  }
-
-  header h4,
-  header h3{
-    position: absolute;
-    padding: 2% 2% 1% 2%;
-    margin: 2% 3% 1% 3%;
-    font-family: Arial, sans-serif;
-    font-size: 20px;
-    line-height: 1.5;
-    color: #fff;
-    text-align: right;
-    bottom: 0;
-    transition: background-color 0.5 ;
-
-  }
-
-  .line{
-    border: 3px solid teal;
-    width: 75%;
-    align-items: center;
-    padding: 0 0 0 0;
-    margin: 2% 50% 2% 13.5%;
-  }
-
-  header h4:hover{
-    background-color: rgba(	147, 147, 147, 0.5);
-  }
-
-  header h3:hover{
-    background-color: rgba(	147, 147, 147, 0.5);
   }
 
   img {
@@ -146,7 +113,7 @@ nav ul{
 .gallery{
     max-width: 960px;
     margin: 0 auto;
-    padding: 80px 0;
+    padding: 60px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -158,11 +125,11 @@ section ul li{
 }
 
 .gallery img {
-    width: 150px;
-    height: 150px;
+    width: 30vh;
+    height: 30vh;
     border-radius: 50%;
     object-fit: cover;
-  }
+}
 
   .location {
     margin: 20px;
@@ -180,9 +147,89 @@ section ul li{
       background-position: center;
       display: flex;
       justify-content: center;
-      align-items: center
+      align-items: center;
       margin: 0;
       height: 90px;
       padding: 20px 0px 10px 0px;
       color: white;
   }
+
+
+ @media only screen and (max-width: 700px){
+   body{
+     padding: 0;
+     width: 100%;
+   }
+
+   @keyframes backgroundTransition1 {
+         0% {
+           background-color: rgba(54,38,83); /* Color A */
+         }
+         50% {
+           background-color: #676752; /* Color B */
+         }
+         75% {
+           background-color: rgba(139, 96, 208); /* Color A */
+         }
+         100% {
+           background-color: rgba(54,38,83,); /* Color A */
+         }
+       }
+
+     .navLink{
+       height: 10vh;
+     }
+
+     nav{
+        background-color: inherit;
+       }
+
+   nav ul{
+     width: 100%;
+     animation: backgroundTransition1 20s infinite;
+     position: absolute;
+     top: 55px;
+     right: 0;
+     z-index: 2;
+     margin: 30px 0 0 0;
+   }
+
+   nav ul li{
+     display: block;
+     margin-top: 10px;
+     margin-bottom: 10px;
+   }
+
+   .menuimg{
+     width: 5%;
+     display: block;
+     cursor: pointer;
+   }
+
+   .logo{
+     width: 12%;
+     height: 70%;
+   }
+
+   #menuList{
+     overflow: hidden;
+     transition: 0.5s;
+   }
+
+
+  .gallery{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  img{
+    margin: 10% 0 10% 0;
+    align-items: center;
+  }
+
+ footer{
+   margin-bottom: 0;
+ }
+ }
