--- a/HomePageccs.css
+++ b/HomePageccs.css
@@ -2,7 +2,7 @@
   background-size: cover;
   padding: 0;
   margin: 0;
-  overflow: auto;
+
 }
 
 body::-webkit-scrollbar {
@@ -11,11 +11,11 @@ body::-webkit-scrollbar {
 }
 
 body::-webkit-scrollbar-track {
- background-color: #f1f1f1; /* Optional: Change the track color */
+ background-color: #f1f1f1; 
 }
 
 body::-webkit-scrollbar-thumb {
- background-color: #888; /* Optional: Change the thumb color */
+ background-color: #888;
 }
 
 @keyframes backgroundTransition {
@@ -37,8 +37,6 @@ body{
       animation: backgroundTransition 20s infinite;
     }
 
-    /* Use a media query to add a breakpoint at 800px: */
-
 
 .navLink {
       width: 100%;
@@ -54,6 +52,7 @@ body{
 
 .menulink {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -74,12 +73,14 @@ body{
 }
 
 .menuimg{
-  width: 2.5%;
+  display: none;
+  width: 3%;
   cursor: pointer;
   padding-right: 10px;
 }
 
 nav{
+  height: 40%;
   margin-left: 19%;
   margin-right: 1%;
   flex: 1;
@@ -112,22 +113,22 @@ a:hover{
 
 .Intro{
   width: 100%;
-  height: 90vh; /* Set a fixed height for the container */
+  height: 90vh;
   background-image: url("sea backgrounda.jpg");
   background-size: cover;
+  display: grid;
 }
 
 header h4,
 header h3{
-  position: absolute;
+  align-self: end;
   padding: 2% 2% 1% 2%;
   margin: 2% 3% 1% 3%;
   font-family: Arial, sans-serif;
-  font-size: 20px;
+  font-size: 115%;
   line-height: 1.5;
   color: #fff;
   text-align: right;
-  bottom: 0;
   transition: background-color 0.5 ;
 }
 
@@ -136,7 +137,7 @@ header h3{
   width: 75%;
   align-items: center;
   padding: 0 0 0 0;
-  margin: 2% 25% 2% 25%;
+  margin: 2% 20% 2% 24%;
 }
 
 header h4:hover{
@@ -149,48 +150,42 @@ header h3:hover{
 
 #notHead{
   font-family: 'TTNorms-Regular', sans-serif;
+
 }
 
 .row{
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin: 100px;
 }
 
 .img{
-  position: relative;
-  flex-basis: 50%;
-  display: flex;
-  align-items: center;
   background-color: none;
-
 }
 
 .firstimg{
-  width: 70%;
+  width: 33%;
   margin: 0;
   padding: 0;
 }
-
 .secondimg{
-  width: 75%;
-  margin: 0;
+  width: 41%;
+  margin-right: 5%;
   padding: 0;
 }
-
 .thirdimg{
-  width: 75%;
-  margin: 0;
+  width: 41%;
+  margin-right: 5%;
   padding: 0;
 }
 
 .mySectiona,
-.mySectionb
+.mySectionb,
 .mySectionc{
   position: relative;
-  flex-basis: 50%;
-  margin-left: 50px;
+  margin: 0 1.5% 0 1.5%;
 }
 
 
@@ -244,7 +239,6 @@ ol{
 
 ol li{
   margin: 4.5px 0 4.5px 0;
-
 }
 
 ol li:hover{
@@ -265,8 +259,6 @@ button{
   cursor: pointer;
   transition: width 0.5;
 }
-
-
 
 button:hover{
   width: 160px;
@@ -306,3 +298,114 @@ cursor: pointer;
 .social-links{
 text-align: center;
  }
+
+
+@media only screen and (max-width: 700px){
+  body{
+    padding: 0;
+    width: 100%;
+  }
+
+  @keyframes backgroundTransition1 {
+        0% {
+          background-color: rgba(54,38,83); /* Color A */
+        }
+        50% {
+          background-color: #676752; /* Color B */
+        }
+        75% {
+          background-color: rgba(139, 96, 208); /* Color A */
+        }
+        100% {
+          background-color: rgba(54,38,83,); /* Color A */
+        }
+      }
+  nav ul{
+    width: 100%;
+    animation: backgroundTransition1 20s infinite;
+    position: absolute;
+    top: 55px;
+    right: 0;
+    z-index: 2;
+  }
+  nav ul li{
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .menuimg{
+    width: 5%;
+    display: block;
+    cursor: pointer;
+  }
+
+  .logo{
+    width: 12%;
+    height: 10%;
+  }
+
+  #menuList{
+    overflow: hidden;
+    transition: 0.5s;
+  }
+
+  #notHead{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin: 30px 0 20px 0;
+  }
+
+ .row{
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: auto auto;
+   gap: 10px;
+   justify-items: center;
+   align-items: center;
+   text-align: center;
+   margin: 15px 0 10px 0;
+   }
+
+  header h4,
+  header h3{
+     font-size: 100%;
+}
+
+
+  .firstimg,
+  .secondimg,
+  .thirdimg,
+  .mySectiona,
+  .mySectionb,
+  .mySectionc{
+     margin: 10px 0 10px 0;
+  }
+
+  .firstimg{
+    width: 45vw;
+    height: auto;
+  }
+
+  .secondimg,
+  .thirdimg{
+    width: 65vw;
+    height: auto;
+  }
+
+  section{
+    width: 65vw;
+    padding: 10px 0 10px 0;
+  }
+
+  .mySectiona,
+  .mySectionb,
+  .mySectionc{
+    width: 65vw;
+  }
+
+footer{
+  margin-bottom: 0;
+}
+}
