--- a/Threats to Turtles.css
+++ b/Threats to Turtles.css
@@ -6,29 +6,33 @@ body {
 }
 
 body::-webkit-scrollbar {
- width: 0.5em;/* Adjust the width as needed */
- height: 0.5em;  /* Adjust the height as needed */
+ width: 0.5em;
+ height: 0.5em;
 }
 
 body::-webkit-scrollbar-track {
- background-color: #f1f1f1; /* Optional: Change the track color */
+ background-color: #f1f1f1;
 }
 
 body::-webkit-scrollbar-thumb {
- background-color: #888; /* Optional: Change the thumb color */
+ background-color: #888;
 }
 
 .navLink {
       width: 100%;
       min-height: 100%;
-      padding: 0 2% 0 2%;
-      margin: 0 0 1% 0;
+      padding-left: 2%;
+      padding-right: 2%;
+      padding-top: 1%;
+      margin-bottom: 2.5%;
       box-sizing: border-box;
       overflow: hidden;
 }
 
+
 .menulink {
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -49,12 +53,14 @@ body::-webkit-scrollbar-thumb {
 }
 
 .menuimg{
-  width: 2.5%;
+  display: none;
+  width: 3%;
   cursor: pointer;
   padding-right: 10px;
 }
 
 nav{
+  height: 40%;
   margin-left: 19%;
   margin-right: 1%;
   flex: 1;
@@ -62,7 +68,7 @@ nav{
   background-color: #3e9f90;
 }
 
-nav ul li{
+ nav ul li{
    list-style: none;
    display: inline-block;
    margin-right: 30px;
@@ -85,36 +91,6 @@ a:hover{
   transition: color 0.5s;
 }
 
-.Intro{
-  width: 100%;
-  height: 90vh; /* Set a fixed height for the container */
-  background-image: url("sea backgrounda.jpg");
-  background-size: cover;
-}
-
-header h4,
-header h3{
-  position: absolute;
-  padding: 2% 2% 1% 2%;
-  margin: 2% 3% 1% 3%;
-  font-family: Arial, sans-serif;
-  font-size: 20px;
-  line-height: 1.5;
-  color: #fff;
-  text-align: right;
-  bottom: 0;
-  transition: background-color 0.5 ;
-
-}
-
-header h4:hover{
-  background-color: rgba(	147, 147, 147, 0.5);
-}
-
-header h3:hover{
-  background-color: rgba(	147, 147, 147, 0.5);
-}
-
 .notFooter{
   padding: 20px;
 }
@@ -125,39 +101,48 @@ h1 {
   color: #333;
 }
 
-h2 {
+h2{
   padding-left: 2%;
   width: 35vw;
   margin-top: 30px;
   color: #009;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
 }
 
-img {
+.notFooter img {
   display: block;
-  max-width: 100%;
-  margin: 20px auto;
+  max-width: 50%;
+  max-height: 65%;
+  margin: 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
+
+.smallimg{
+      width: 550px;
+      height: 350px;
+ }
 
 p {
   margin-bottom: 20px;
   line-height: 1.5;
 }
 
-ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin-top: 10px;
+.notFooter ul{
+   list-style-type: none;
+   padding-left: 0;
+   margin-top: 10px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+   align-items: center;
 }
 
-a {
-  color: green;
+.notFooter a {
+  color: #cdc8d1;
   transition: color 0.3s;
 }
 
-a:hover {
+.notFooter a:hover {
   color: #003366;
   text-decoration: bold;
 }
@@ -167,11 +152,38 @@ a:hover {
   margin: 0 1% 0 1%;
 }
 
+#linka h2,
+#linkb h2{
+  position: relative;
+  top: 35%;
+  left: 10%;
+  width: 35vw;
+  color: white;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.0);
+}
+#linka h2:hover,
+#linkb h2:hover{
+  color: #009;
+}
+
 #linka{
-  background-image:
+  width: 45vw;
+  height: 30vh;
+  background-image:url("kosgoda hatcheries.jpg");
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  margin: 2% 2% 2% 2%;
 }
 #linkb{
-  background-image:
+  width: 45vw;
+  height: 30vh;
+  background-image: url("Bentota-view-from-upper.jpg");
+  background-size: cover;
+  background-position: center;
+  text-align: center;
+  margin: 2% 2% 2% 2%;
+
 }
 
 footer{
@@ -186,3 +198,69 @@ footer{
     height: 90px;
     padding: 20px 0px 10px 0px;
   }
+
+  @media only screen and (max-width: 700px){
+  body{
+    padding: 0;
+    width: 100%;
+  }
+
+  @keyframes backgroundTransition1 {
+        0% {
+          background-color: rgba(54,38,83); /* Color A */
+        }
+        50% {
+          background-color: #676752; /* Color B */
+        }
+        75% {
+          background-color: rgba(139, 96, 208); /* Color A */
+        }
+        100% {
+          background-color: rgba(54,38,83,); /* Color A */
+        }
+      }
+  nav ul{
+    width: 100%;
+    animation: backgroundTransition1 20s infinite;
+    position: absolute;
+    top: 55px;
+    right: 0;
+    z-index: 2;
+  }
+  nav ul li{
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  .menuimg{
+    width: 5%;
+    display: block;
+  }
+
+  .logo{
+    width: 12%;
+    height: 10%;
+  }
+
+  #menuList{
+    overflow: hidden;
+    transition: 0.5s;
+  }
+
+  .notFooter img {
+    max-width: 90vw;
+    margin: 0;
+    padding: 0;
+  }
+
+  .smallimg{
+        width: 350px;
+        height: 200px;
+   }
+
+footer{
+  margin-bottom: 0;
+}
+
+}
