--- a/dual.css
+++ b/dual.css
@@ -7,16 +7,16 @@ body {
 }
 
 body::-webkit-scrollbar {
- width: 0.5em;/* Adjust the width as needed */
- height: 0.5em;  /* Adjust the height as needed */
+ width: 0.5em;
+ height: 0.5em;
 }
 
 body::-webkit-scrollbar-track {
- background-color: #f1f1f1; /* Optional: Change the track color */
+ background-color: #f1f1f1;
 }
 
 body::-webkit-scrollbar-thumb {
- background-color: #888; /* Optional: Change the thumb color */
+ background-color: #888; 
 }
 
 .navLink {
@@ -52,6 +52,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .menuimg{
+  display: none;
   width: 2.5%;
   cursor: pointer;
   padding-right: 10px;
@@ -89,7 +90,7 @@ a:hover{
 }
 
 main {
-  max-width: 800px;
+  max-width: 80%;
   margin: 20px auto;
   padding: 20px;
   background-color: #fff;
@@ -98,14 +99,24 @@ main {
 
 section {
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 h1, h2 {
+  padding-left: 10px;
   color: #333;
 }
 
+p{
+  text-align: center;
+}
+
 img {
-  max-width: 100%;
+  margin: 0 auto; /* Set left and right margins to auto */
+  display: block;
+  max-width: 55%;
   height: auto;
 }
 
@@ -134,4 +145,61 @@ cursor: pointer;
 
 .social-links{
 text-align: center;
+ }
+ @media only screen and (max-width: 700px){
+   body{
+     padding: 0;
+     width: 100%;
+   }
+
+   @keyframes backgroundTransition1 {
+         0% {
+           background-color: rgba(54,38,83); /* Color A */
+         }
+         50% {
+           background-color: #676752; /* Color B */
+         }
+         75% {
+           background-color: rgba(139, 96, 208); /* Color A */
+         }
+         100% {
+           background-color: rgba(54,38,83,); /* Color A */
+         }
+       }
+   nav ul{
+     width: 100%;
+     animation: backgroundTransition1 20s infinite;
+     position: absolute;
+     top: 55px;
+     right: 0;
+     z-index: 2;
+   }
+   nav ul li{
+     display: block;
+     margin-top: 10px;
+     margin-bottom: 10px;
+   }
+
+   .menuimg{
+     width: 5%;
+     display: block;
+     cursor: pointer;
+   }
+
+   .logo{
+     width: 12%;
+     height: 10%;
+   }
+
+   #menuList{
+     overflow: hidden;
+     transition: 0.5s;
+   }
+
+   main {
+     max-width: 80%;
+
+ footer{
+   margin-bottom: 0;
+ }
  }
